first section background 2

--- a/inc/assets/sass/responsive.scss
+++ b/inc/assets/sass/responsive.scss
@@ -1,31 +1,31 @@
-@import 'variables';
+@import "variables";
 @charset "utf-8";
 
-@media (max-width: 1359px){
+@media (max-width: 1359px) {
 }
 
-@media (max-width: 1199px){
+@media (max-width: 1199px) {
 }
 
 @media screen and (max-width: 991px) {
 }
 
-@media (max-width: 767px){
+@media (max-width: 767px) {
 }
 
-@media (max-width: 575px){
+@media (max-width: 575px) {
 }
 
-@media (max-width: 470px){
+@media (max-width: 470px) {
 }
 
-@media (max-width: 400px){
+@media (max-width: 400px) {
 }
 
-@media (max-width: 440px){
+@media (max-width: 440px) {
 }
 
-@media (max-width: 350px){
+@media (max-width: 350px) {
 }
 
 @media (min-width: 1390px) {
