first section background 3

--- a/inc/assets/css/custom_style.css
+++ b/inc/assets/css/custom_style.css
@@ -298,5 +298,5 @@ header {
 }
 
 #home {
-  background-image: url("inc/assets/images/Nuwera-main-image.webp");
+  background-image: url("../images/Nuwera-main-image.webp");
 }/*# sourceMappingURL=custom_style.css.map */
