--- a/inc/assets/sass/custom_style.scss
+++ b/inc/assets/sass/custom_style.scss
@@ -310,5 +310,5 @@ header {
 }
 
 #home {
-  background-image: url("inc/assets/images/Nuwera-main-image.webp");
+  background-image: url("../images/Nuwera-main-image.webp");
 }
