--- a/inc/assets/css/custom_style.css
+++ b/inc/assets/css/custom_style.css
@@ -299,4 +299,6 @@ header {
 
 #home {
   background-image: url("../images/Nuwera-main-image.webp");
+  background-size: cover;
+  background-position: center;
 }/*# sourceMappingURL=custom_style.css.map */
