--- a/inc/assets/sass/custom_style.scss
+++ b/inc/assets/sass/custom_style.scss
@@ -311,4 +311,6 @@ header {
 
 #home {
   background-image: url("../images/Nuwera-main-image.webp");
+  background-size: cover;
+  background-position: center;
 }
