first section background 8

--- a/inc/assets/css/custom_style.css
+++ b/inc/assets/css/custom_style.css
@@ -298,6 +298,7 @@ header {
 }
 
 #home {
+  height: 100dvh;
   background-size: cover;
   background-position: center;
 }/*# sourceMappingURL=custom_style.css.map */
