--- a/inc/assets/css/custom_style.css
+++ b/inc/assets/css/custom_style.css
@@ -304,7 +304,7 @@ header {
 }
 #home img {
   position: absolute;
-  top: 0;
-  left: 0;
-  transform: translate(50%, 10%);
+  top: 10%;
+  left: 50%;
+  transform: translateX(-50%);
 }/*# sourceMappingURL=custom_style.css.map */
