--- a/inc/assets/sass/custom_style.scss
+++ b/inc/assets/sass/custom_style.scss
@@ -315,8 +315,8 @@ header {
   background-position: center;
   img {
     position: absolute;
-    top: 0;
-    left: 0;
-    transform: translate(50%, 10%);
+	top: 10%;
+    left: 50%;
+    transform: translateX(-50%);
   }
 }
