--- a/inc/assets/css/custom_style.css
+++ b/inc/assets/css/custom_style.css
@@ -307,4 +307,8 @@ header {
   top: 12%;
   left: 50%;
   transform: translateX(-50%);
+}
+
+#latest-single {
+  height: 100dvh;
 }/*# sourceMappingURL=custom_style.css.map */
