--- a/inc/assets/css/custom_style.css
+++ b/inc/assets/css/custom_style.css
@@ -302,11 +302,22 @@ header {
   background-size: cover;
   background-position: center;
 }
-#home img {
+#home #nuwera-logo {
   position: absolute;
-  top: 12%;
+  top: 35%;
   left: 50%;
   transform: translateX(-50%);
+}
+#home #nuwera-crowd-img {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+  transform: scale(calc(1 + var(--progress) / 4));
+  transition: transform 0.3s ease;
 }
 
 #latest-single {
