--- a/inc/assets/sass/custom_style.scss
+++ b/inc/assets/sass/custom_style.scss
@@ -313,14 +313,24 @@ header {
   height: 100dvh;
   background-size: cover;
   background-position: center;
-  img {
+  #nuwera-logo {
     position: absolute;
-    top: 12%;
+    top: 35%;
     left: 50%;
     transform: translateX(-50%);
   }
+  #nuwera-crowd-img {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    transform: scale(calc(1 + var(--progress) / 4));
+    transition: transform 0.3s ease;
+  }
 }
 
-#latest-single{
-	height: 100dvh;
+#latest-single {
+  height: 100dvh;
 }
