--- a/inc/assets/sass/custom_style.scss
+++ b/inc/assets/sass/custom_style.scss
@@ -318,6 +318,7 @@ header {
     top: 35%;
     left: 50%;
     transform: translateX(-50%);
+    z-index: 1;
   }
   #nuwera-crowd-img {
     position: absolute;
@@ -326,8 +327,9 @@ header {
     width: 100%;
     height: 100%;
     object-fit: cover;
-    transform: scale(calc(1 + var(--progress) / 4));
+    transform: scale(calc(1 + var(--scroll) / 4));
     transition: transform 0.3s ease;
+    z-index: 0;
   }
 }
 
