--- a/inc/assets/sass/custom_style.scss
+++ b/inc/assets/sass/custom_style.scss
@@ -313,6 +313,7 @@ header {
   height: 100dvh;
   background-size: cover;
   background-position: center;
+  position: relative;
   overflow: hidden;
   #nuwera-logo {
     position: absolute;
@@ -328,7 +329,7 @@ header {
     width: 100%;
     height: 100%;
     object-fit: cover;
-    transform: scale(calc(1 + var(--scroll) / 4));
+    transform: scale(calc(1 + var(--scroll) / 2));
     z-index: 0;
   }
 }
