--- a/inc/assets/sass/custom_style.scss
+++ b/inc/assets/sass/custom_style.scss
@@ -311,8 +311,7 @@ header {
 
 #home {
   height: 100dvh;
-  background-size: cover;
-  background-position: center;
+  background-color: #121925;
   position: relative;
   overflow: hidden;
   #nuwera-logo {
