--- a/inc/assets/css/custom_style.css
+++ b/inc/assets/css/custom_style.css
@@ -299,8 +299,7 @@ header {
 
 #home {
   height: 100dvh;
-  background-size: cover;
-  background-position: center;
+  background-color: #121925;
   position: relative;
   overflow: hidden;
 }
