--- a/inc/assets/sass/custom_style.scss
+++ b/inc/assets/sass/custom_style.scss
@@ -82,10 +82,10 @@ h1,
 h2,
 h3,
 p {
-  margin: 0;
-  padding: 0;
-  border: 0;
-  vertical-align: baseline;
+	margin: 0;
+	padding: 0;
+	border: 0;
+	vertical-align: baseline;
 }
 article,
 aside,
@@ -98,27 +98,27 @@ hgroup,
 menu,
 nav,
 section {
-  display: block;
+	display: block;
 }
 ol,
 ul {
-  list-style: none;
+	list-style: none;
 }
 // End of reset classes
 
 // defaults
 div:focus {
-  outline: none;
+	outline: none;
 }
 a,
 a:visited {
-  color: inherit;
-  text-decoration: none;
+	color: inherit;
+	text-decoration: none;
 }
 a:hover,
 a:focus {
-  text-decoration: none;
-  color: inherit;
+	text-decoration: none;
+	color: inherit;
 }
 
 textarea,
@@ -136,203 +136,204 @@ input[type="text"],
 input[type="time"],
 input[type="url"],
 input[type="week"] {
-  -webkit-box-sizing: border-box;
-  -moz-box-sizing: border-box;
-  box-sizing: border-box;
-  -webkit-background-clip: padding;
-  -moz-background-clip: padding;
-  background-clip: padding-box;
-  -webkit-border-radius: 0;
-  -moz-border-radius: 0;
-  -ms-border-radius: 0;
-  -o-border-radius: 0;
-  border-radius: 0;
-  -webkit-appearance: none;
-  border: none;
-  text-align: left;
-  font-size: 1em;
-  vertical-align: middle;
-  padding: 10px 15px;
-  margin-bottom: 12px;
+	-webkit-box-sizing: border-box;
+	-moz-box-sizing: border-box;
+	box-sizing: border-box;
+	-webkit-background-clip: padding;
+	-moz-background-clip: padding;
+	background-clip: padding-box;
+	-webkit-border-radius: 0;
+	-moz-border-radius: 0;
+	-ms-border-radius: 0;
+	-o-border-radius: 0;
+	border-radius: 0;
+	-webkit-appearance: none;
+	border: none;
+	text-align: left;
+	font-size: 1em;
+	vertical-align: middle;
+	padding: 10px 15px;
+	margin-bottom: 12px;
 }
 input,
 textarea {
-  box-shadow: none !important;
-  border-radius: 0;
+	box-shadow: none !important;
+	border-radius: 0;
 }
 input:focus,
 textarea:focus,
 select:focus,
 option:focus {
-  outline: none;
+	outline: none;
 }
 p {
-  margin-bottom: 15px;
+	margin-bottom: 15px;
 }
 body {
-  color: $text_black;
-  font-family: $montserrat-regular;
-  background-color: $text_white;
-  overflow: auto;
-  overflow-x: hidden !important;
+	color: $text_black;
+	font-family: $montserrat-regular;
+	background-color: $text_white;
+	overflow: auto;
+	overflow-x: hidden !important;
 }
 body.hide_scroll {
-  padding-right: 17px;
-  overflow: hidden !important;
+	padding-right: 17px;
+	overflow: hidden !important;
 }
 // END of resettting classes
 
 // Helper Classes
 .float-left {
-  float: left !important;
+	float: left !important;
 }
 .float-right {
-  float: right !important;
+	float: right !important;
 }
 .clear {
-  clear: both;
+	clear: both;
 }
 .upper {
-  text-transform: uppercase;
+	text-transform: uppercase;
 }
 .lower {
-  text-transform: lowercase !important;
+	text-transform: lowercase !important;
 }
 .posrel {
-  position: relative;
+	position: relative;
 }
 .posabs {
-  position: absolute;
+	position: absolute;
 }
 .mar0auto {
-  margin: 0 auto;
+	margin: 0 auto;
 }
 .text-left {
-  text-align: left;
+	text-align: left;
 }
 .text-right {
-  text-align: right;
+	text-align: right;
 }
 .no-padding {
-  padding-left: 0px;
-  padding-right: 0px;
+	padding-left: 0px;
+	padding-right: 0px;
 }
 .no-margin {
-  margin-left: 0px;
-  margin-right: 0px;
+	margin-left: 0px;
+	margin-right: 0px;
 }
 .maze_o {
-  color: #ff9600;
+	color: #ff9600;
 }
 .maze_b {
-  color: #000;
+	color: #000;
 }
 .text_main_color {
-  color: $main_color;
+	color: $main_color;
 }
 
 // end
 .noselect {
-  -webkit-touch-callout: none;
-  -webkit-user-select: none;
-  -khtml-user-select: none;
-  -moz-user-select: none;
-  -ms-user-select: none;
-  user-select: none;
+	-webkit-touch-callout: none;
+	-webkit-user-select: none;
+	-khtml-user-select: none;
+	-moz-user-select: none;
+	-ms-user-select: none;
+	user-select: none;
 }
 ::-moz-selection {
-  /* Code for Firefox */
-  color: $text_black;
-  background: $main_color;
+	/* Code for Firefox */
+	color: $text_black;
+	background: $main_color;
 }
 ::selection {
-  color: $text_black;
-  background: $main_color;
+	color: $text_black;
+	background: $main_color;
 }
 
 :focus {
-  outline: none !important;
+	outline: none !important;
 }
 
 @-webkit-keyframes fa-beat {
-  0% {
-    transform: scale(1);
-  }
-  5% {
-    transform: scale(1.25);
-  }
-  20% {
-    transform: scale(1.15);
-  }
-  30% {
-    transform: scale(1.8);
-  }
-  45% {
-    transform: scale(1);
-  }
-  100% {
-    transform: scale(1);
-  }
+	0% {
+		transform: scale(1);
+	}
+	5% {
+		transform: scale(1.25);
+	}
+	20% {
+		transform: scale(1.15);
+	}
+	30% {
+		transform: scale(1.8);
+	}
+	45% {
+		transform: scale(1);
+	}
+	100% {
+		transform: scale(1);
+	}
 }
 
 @keyframes fa-beat {
-  0% {
-    transform: scale(1);
-  }
-  5% {
-    transform: scale(1.25);
-  }
-  20% {
-    transform: scale(1.15);
-  }
-  30% {
-    transform: scale(1.8);
-  }
-  45% {
-    transform: scale(1);
-  }
-  100% {
-    transform: scale(1);
-  }
+	0% {
+		transform: scale(1);
+	}
+	5% {
+		transform: scale(1.25);
+	}
+	20% {
+		transform: scale(1.15);
+	}
+	30% {
+		transform: scale(1.8);
+	}
+	45% {
+		transform: scale(1);
+	}
+	100% {
+		transform: scale(1);
+	}
 }
 .pulse {
-  animation: fa-beat 1.2s ease infinite;
-  display: inline-block;
-  padding: 0px 5px 0px 4px;
-  color: $sec_color;
+	animation: fa-beat 1.2s ease infinite;
+	display: inline-block;
+	padding: 0px 5px 0px 4px;
+	color: $sec_color;
 }
 .navbar-brand {
-  position: relative;
+	position: relative;
 }
 header {
-  z-index: 2;
-  position: fixed;
+	z-index: 2;
+	position: fixed;
 }
 
 #home {
-  height: 100dvh;
-  background-color: #121925;
-  position: relative;
-  overflow: hidden;
-  #nuwera-logo {
-    position: absolute;
-    top: 35%;
-    left: 50%;
-    transform: translateX(-50%);
-    z-index: 1;
-  }
-  #nuwera-crowd-img {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-    transform: scale(calc(1 + var(--scroll) / 2));
-    z-index: 0;
-  }
+	height: 100dvh;
+	background-color: #121925;
+	position: relative;
+	overflow: hidden;
+	#nuwera-logo {
+		position: absolute;
+		top: 35%;
+		left: 50%;
+		transform: translateX(-50%);
+		z-index: 1;
+	}
+	#nuwera-crowd-img {
+		position: absolute;
+		top: 0;
+		left: 0;
+		width: 100%;
+		height: 100%;
+		object-fit: cover;
+		transform: scale(calc(1 + var(--scroll) / 2));
+		z-index: 0;
+	}
 }
 
 #latest-single {
-  height: 100dvh;
+	height: 100dvh;
+	align-content: center;
 }
