add font albert

--- a/inc/assets/sass/_variables.scss
+++ b/inc/assets/sass/_variables.scss
@@ -59,3 +59,4 @@ $montserrat-light: 					"montserrat-light";
 $montserrat-semibold: 				"montserrat-semibold";
 $nudista-bold: 						"nudista-bold";
 $nudista-semibold-regular: 			"nudista-semibold-regular";
+$albert-extra-bold: 				"AlbertSans-ExtraBold";
