--- a/inc/assets/css/custom_style.css
+++ b/inc/assets/css/custom_style.css
@@ -134,10 +134,16 @@ input[type=text],
 input[type=time],
 input[type=url],
 input[type=week] {
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
   box-sizing: border-box;
   -webkit-background-clip: padding;
   -moz-background-clip: padding;
   background-clip: padding-box;
+  -webkit-border-radius: 0;
+  -moz-border-radius: 0;
+  -ms-border-radius: 0;
+  -o-border-radius: 0;
   border-radius: 0;
   -webkit-appearance: none;
   border: none;
@@ -168,7 +174,7 @@ p {
 body {
   color: #000;
   font-family: "montserrat-regular";
-  background-color: #fff;
+  background-color: #1b1b1b;
   overflow: auto;
   overflow-x: hidden !important;
 }
@@ -243,7 +249,9 @@ body.hide_scroll {
 .noselect {
   -webkit-touch-callout: none;
   -webkit-user-select: none;
+  -khtml-user-select: none;
   -moz-user-select: none;
+  -ms-user-select: none;
   user-select: none;
 }
 
@@ -260,6 +268,27 @@ body.hide_scroll {
 
 :focus {
   outline: none !important;
+}
+
+@-webkit-keyframes fa-beat {
+  0% {
+    transform: scale(1);
+  }
+  5% {
+    transform: scale(1.25);
+  }
+  20% {
+    transform: scale(1.15);
+  }
+  30% {
+    transform: scale(1.8);
+  }
+  45% {
+    transform: scale(1);
+  }
+  100% {
+    transform: scale(1);
+  }
 }
 @keyframes fa-beat {
   0% {
@@ -316,8 +345,7 @@ header {
   left: 0;
   width: 100%;
   height: 100%;
-  -o-object-fit: cover;
-     object-fit: cover;
+  object-fit: cover;
   transform: scale(calc(1 + var(--scroll) / 2));
   z-index: 0;
 }
@@ -325,4 +353,13 @@ header {
 #latest-single {
   height: 100dvh;
   align-content: center;
-}/*# sourceMappingURL=custom_style.css.map */
+}
+
+.albums {
+  background-color: #1b1b11;
+}
+.albums h3 {
+  font-family: "AlbertSans-ExtraBold";
+  font-size: 1.2rem;
+  text-align: left;
+}
