add font albert

--- a/inc/assets/css/custom_style.css
+++ b/inc/assets/css/custom_style.css
@@ -356,7 +356,7 @@ header {
 }
 
 .albums {
-  background-color: #1b1b11;
+  background-color: #1b1b1b;
 }
 .albums h3 {
   font-family: "AlbertSans-ExtraBold";
