--- a/inc/assets/sass/custom_style.scss
+++ b/inc/assets/sass/custom_style.scss
@@ -339,7 +339,7 @@ header {
 }
 
 .albums{
-  background-color: #1b1b11;
+  background-color: #1b1b1b;
   h3{
 	font-family: $albert-extra-bold;
 	font-size: 1.2rem;
