--- a/inc/assets/sass/custom_style.scss
+++ b/inc/assets/sass/custom_style.scss
@@ -344,5 +344,7 @@ header {
 	font-family: $albert-extra-bold;
 	font-size: 1.2rem;
 	text-align: left;
+	color: #fff;
+	text-transform: uppercase;
   }
 }
