--- a/style.css
+++ b/style.css
@@ -207,90 +207,11 @@ th {
   padding: 0;
 }
 
-@font-face {
-  font-family: "Rutan-Regular";
-  src: url('./inc/assets/fonts/rutan-regular.otf') format('opentype'),
-    url("./inc/assets/fonts/Rutan-Regular.woff") format("woff"),
-  url("./inc/assets/fonts/Rutan-Regular.woff2") format("woff2");
-  font-weight: normal;
-  font-style: normal;
-}
-@font-face {
-  font-family: "Rutan-Black";
-  src: url("inc/assets/fonts/Rutan-Black.woff") format("woff"),
-  url("inc/assets/fonts/Rutan-Black.woff2") format("woff2");
-  font-weight: normal;
-  font-style: normal;
-}
-@font-face {
-  font-family: "Rutan-Bold";
-  src: url("inc/assets/fonts/Rutan-Bold.woff2") format("woff2"),
-  url("inc/assets/fonts/Rutan-Bold.woff2") format("woff2");
-  font-weight: normal;
-  font-style: normal;
-}
-@font-face {
-  font-family: "Rutan-DemiBold";
-  src: url("inc/assets/fonts/Rutan-DemiBold.woff") format("woff"),
-  url("inc/assets/fonts/Rutan-DemiBold.woff2") format("woff2");
-  font-weight: normal;
-  font-style: normal;
-}
-@font-face {
-  font-family: "Rutan-Light";
-  src: url("inc/assets/fonts/Rutan-Light.woff") format("woff"),
-  url("inc/assets/fonts/Rutan-Light.woff2") format("woff2");
-  font-weight: normal;
-  font-style: normal;
-}
-@font-face {
-  font-family: "Rutan-Medium";
-  src: url("inc/assets/fonts/Rutan-Medium.woff") format("woff"),
-  url("inc/assets/fonts/Rutan-Medium.woff2") format("woff2");
-  font-weight: normal;
-  font-style: normal;
-}
-@font-face {
-  font-family: "Rutan-Thin";
-  src: url("inc/assets/fonts/Rutan-Thin.woff") format("woff"),
-  url("inc/assets/fonts/Rutan-Thin.woff2") format("woff2");
-  font-weight: normal;
-  font-style: normal;
-}
-@font-face {
-  font-family: "mm-icons";
-  src: url("./inc/assets/fonts/mm-icons.woff") format("woff"),
-  url("./inc/assets/fonts/mm-icons.woff2") format("woff2");
-  font-weight: normal;
-  font-style: normal;
-}
-
-/* for muystique rose page */
-@font-face {
-  font-family: "calibre-light";
-  src: url("./inc/assets/fonts/Calibre-Light.woff") format("woff"),
-  url("./inc/assets/fonts/Calibre-Light.woff2") format("woff2");
-  font-weight: normal;
-  font-style: normal;
-}
-@font-face {
-  font-family: "calibre-bold";
-  src: url("./inc/assets/fonts/Calibre-Bold.woff") format("woff"),
-  url("./inc/assets/fonts/Calibre-Bold.woff2") format("woff2");
-  font-weight: normal;
-  font-style: normal;
-}
-
  @font-face {
   font-family: "AlbertSans-ExtraBold";
-  src: url("./inc/assets/fonts/AlbertSans-ExtraBold.ttf") format("truetype");
+  src: url("./inc/assets/fonts/AlbertSans-ExtraBold.ttf") format("truetype"),
+  url("./inc/assets/fonts/AlbertSans-ExtraBold.woff2") format("woff2"),
+  url("./inc/assets/fonts/AlbertSans-ExtraBold.woff") format("woff");
   font-weight: normal;
   font-style: normal;
 }
-/* @font-face {
-  font-family: "victorian-two-regular";
-  src: url("./inc/assets/fonts/victorian-designs-two-regular.ttf") format("truetype"),
-  url("./inc/assets/fonts/victorian-designs-two-regular.woff2") format("woff2");
-  font-weight: normal;
-  font-style: normal;
-} */
