--- a/inc/assets/sass/custom_style.scss
+++ b/inc/assets/sass/custom_style.scss
@@ -348,3 +348,13 @@ header {
 	text-transform: uppercase;
   }
 }
+
+
+@font-face {
+  font-family: "AlbertSans-ExtraBold";
+  src: url("./inc/assets/fonts/albert-extrabold.woff2") format("woff2"),
+      url("./inc/assets/fonts/albert-extrabold.woff") format("woff"),
+      url("./inc/assets/fonts/albert-extrabold.ttf") format("truetype");
+  font-weight: normal;
+  font-style: normal;
+}
