--- a/inc/assets/css/custom_style.css
+++ b/inc/assets/css/custom_style.css
@@ -365,3 +365,10 @@ header {
   color: #fff;
   text-transform: uppercase;
 }
+
+@font-face {
+  font-family: "AlbertSans-ExtraBold";
+  src: url("./inc/assets/fonts/albert-extrabold.woff2") format("woff2"), url("./inc/assets/fonts/albert-extrabold.woff") format("woff"), url("./inc/assets/fonts/albert-extrabold.ttf") format("truetype");
+  font-weight: normal;
+  font-style: normal;
+}
