--- a/inc/assets/css/custom_style.css
+++ b/inc/assets/css/custom_style.css
@@ -362,7 +362,14 @@ header {
   font-style: normal;
 }
 .albums {
-  background-color: #1b1b1b;
+  background-color: #121925;
+}
+.albums h2 {
+  font-size: 2.5rem;
+  text-align: center;
+  font-family: "AlbertSans-ExtraBold";
+  color: #fff;
+  text-transform: uppercase;
 }
 .albums h3 {
   font-family: "AlbertSans-ExtraBold";
