--- a/inc/assets/sass/custom_style.scss
+++ b/inc/assets/sass/custom_style.scss
@@ -347,7 +347,14 @@ header {
   font-style: normal;
 }
 .albums{
-  background-color: #1b1b1b;
+  background-color: #121925;
+  h2{
+	font-size: 2.5rem;
+	text-align: center;
+	font-family: $albert-extra-bold;
+	color: #fff;
+	text-transform: uppercase;
+  }
   h3{
 	font-family: $albert-extra-bold;
 	font-size: 1.2rem;
