--- a/inc/assets/css/custom_style.css
+++ b/inc/assets/css/custom_style.css
@@ -364,6 +364,12 @@ header {
 .albums {
   background-color: #121925;
 }
+.albums img {
+  transition: filter 0.3s ease;
+}
+.albums a:hover {
+  filter: brightness(1.2) drop-shadow(0 0 10px #ff2b59);
+}
 .albums h2 {
   font-size: 2.5rem;
   text-align: center;
