--- a/inc/assets/css/custom_style.css
+++ b/inc/assets/css/custom_style.css
@@ -368,7 +368,7 @@ header {
   transition: filter 0.3s ease;
 }
 .albums a:hover {
-  filter: brightness(1.2) drop-shadow(0 0 10px #ff2b59);
+  filter: brightness(1.15) saturate(1.2);
 }
 .albums h2 {
   font-size: 2.5rem;
