--- a/inc/assets/sass/custom_style.scss
+++ b/inc/assets/sass/custom_style.scss
@@ -352,7 +352,7 @@ header {
     transition: filter 0.3s ease;
   }
   a:hover{
-    filter: brightness(1.2) drop-shadow(0 0 10px #ff2b59);
+    filter: brightness(1.15) saturate(1.2);
   }
   h2{
 	font-size: 2.5rem;
