--- a/inc/assets/sass/custom_style.scss
+++ b/inc/assets/sass/custom_style.scss
@@ -368,12 +368,30 @@ header {
 		font-size: 15px;
 	    a{
 			color: #fff;
-			.fa-spotify:before {
-				content: "\f1bc";
-
-			}
 		}
 	}
   }
 }
-
+.meet-the-band{
+  background-color: #121925;
+  img {
+    transition: filter 0.3s ease;
+  }
+  a:hover{
+    filter: brightness(1.15) saturate(1.2);
+  }
+  h2{
+	font-size: 2.5rem;
+	text-align: center;
+	font-family: $albert-extra-bold;
+	color: #fff;
+	text-transform: uppercase;
+  }
+  h3{
+	font-family: $albert-extra-bold;
+	font-size: 1.2rem;
+	text-align: left;
+	color: #fff;
+	text-transform: uppercase;
+  }
+}
