--- a/inc/assets/sass/custom_style.scss
+++ b/inc/assets/sass/custom_style.scss
@@ -376,7 +376,7 @@ header {
   background-color: #121925;
   img {
     transition: filter 0.3s ease;
-	aspect-ratio: 3/2;
+	aspect-ratio: 116/137;
   }
   a:hover{
     filter: brightness(1.15) saturate(1.2);
@@ -390,9 +390,13 @@ header {
   }
   h3{
 	font-family: $albert-extra-bold;
-	font-size: 1.2rem;
+	font-size: 1.25rem;
 	text-align: left;
 	color: #fff;
 	text-transform: uppercase;
+  }
+  p{
+	color: #fff;
+	font-size: 1rem;
   }
 }
