--- a/inc/assets/sass/custom_style.scss
+++ b/inc/assets/sass/custom_style.scss
@@ -390,13 +390,13 @@ header {
   }
   h3{
 	font-family: $albert-extra-bold;
-	font-size: 1.25rem;
+	font-size: 1rem;
 	text-align: left;
 	color: #fff;
 	text-transform: uppercase;
   }
   p{
 	color: #fff;
-	font-size: 1rem;
+	font-size: .8rem;
   }
 }
