--- a/inc/assets/css/custom_style.css
+++ b/inc/assets/css/custom_style.css
@@ -397,6 +397,7 @@ header {
 .meet-the-band img {
   transition: filter 0.3s ease;
   aspect-ratio: 116/137;
+  object-fit: cover;
 }
 .meet-the-band a:hover {
   filter: brightness(1.15) saturate(1.2);
