--- a/inc/assets/css/custom_style.css
+++ b/inc/assets/css/custom_style.css
@@ -397,6 +397,7 @@ header {
 .meet-the-band img {
   transition: filter 0.3s ease;
   aspect-ratio: 116/137;
+  object-fit: cover;
 }
 .meet-the-band a:hover {
   filter: brightness(1.15) saturate(1.2);
@@ -410,12 +411,12 @@ header {
 }
 .meet-the-band h3 {
   font-family: "AlbertSans-ExtraBold";
-  font-size: 1.25rem;
+  font-size: 1rem;
   text-align: left;
   color: #fff;
   text-transform: uppercase;
 }
 .meet-the-band p {
   color: #fff;
-  font-size: 1rem;
+  font-size: 0.8rem;
 }
