--- a/inc/assets/sass/_variables.scss
+++ b/inc/assets/sass/_variables.scss
@@ -53,10 +53,5 @@ $transition_time: .3s;
 }
 
 // fonts
-$montserrat-regular:			    "montserrat-regular";
-$montserrat-bold: 					"montserrat-bold";
-$montserrat-light: 					"montserrat-light";
-$montserrat-semibold: 				"montserrat-semibold";
-$nudista-bold: 						"nudista-bold";
-$nudista-semibold-regular: 			"nudista-semibold-regular";
 $albert-extra-bold: 				"AlbertSans-ExtraBold";
+$poppins-regular: 					"Poppins-regular";
