--- a/inc/assets/sass/custom_style.scss
+++ b/inc/assets/sass/custom_style.scss
@@ -171,7 +171,7 @@ p {
 }
 body {
 	color: $text_black;
-	font-family: $montserrat-regular;
+	font-family: $poppins-regular;
 	background-color: #1b1b1b;
 	overflow: auto;
 	overflow-x: hidden !important;
