latest single font-8

--- a/inc/assets/css/custom_style.css
+++ b/inc/assets/css/custom_style.css
@@ -297,6 +297,16 @@ header {
   position: fixed;
 }
 
+::-moz-selection {
+  background: #ff2b59;
+  color: #ffffff;
+}
+
+::selection {
+  background: #ff2b59;
+  color: #ffffff;
+}
+
 #home {
   height: 100dvh;
   background-color: #121925;
