--- a/inc/assets/sass/custom_style.scss
+++ b/inc/assets/sass/custom_style.scss
@@ -351,6 +351,12 @@ header {
 		line-height: 0.9;
 		font-family: $albert-extra-bold;
 	}
+	p {
+		font-size: 15px;
+		font-family: Gabarito-Regular;
+		margin-top: 0;
+		margin-bottom: 1.88em;
+	}
 }
 
 .albums {
