--- a/inc/assets/css/custom_style.css
+++ b/inc/assets/css/custom_style.css
@@ -447,3 +447,16 @@ header {
   color: #000;
   text-transform: uppercase;
 }
+
+footer {
+  background-color: #fff;
+}
+footer a {
+  font-size: 1.5rem;
+  color: #000;
+  font-family: "AlbertSans-ExtraBold";
+  text-transform: uppercase;
+}
+footer a:hover {
+  text-decoration: underline;
+}
