latest single font-11

--- a/inc/assets/sass/custom_style.scss
+++ b/inc/assets/sass/custom_style.scss
@@ -357,6 +357,12 @@ header {
 		margin-top: 0;
 		margin-bottom: 1.88em;
 	}
+	a{
+		background-color: #ff2b59;
+		color: #ffffff;
+		font-size: 14px;
+        padding: 10px 32px;
+	}
 }
 
 .albums {
