--- a/inc/assets/css/custom_style.css
+++ b/inc/assets/css/custom_style.css
@@ -134,16 +134,10 @@ input[type=text],
 input[type=time],
 input[type=url],
 input[type=week] {
-  -webkit-box-sizing: border-box;
-  -moz-box-sizing: border-box;
   box-sizing: border-box;
   -webkit-background-clip: padding;
   -moz-background-clip: padding;
   background-clip: padding-box;
-  -webkit-border-radius: 0;
-  -moz-border-radius: 0;
-  -ms-border-radius: 0;
-  -o-border-radius: 0;
   border-radius: 0;
   -webkit-appearance: none;
   border: none;
@@ -249,9 +243,7 @@ body.hide_scroll {
 .noselect {
   -webkit-touch-callout: none;
   -webkit-user-select: none;
-  -khtml-user-select: none;
   -moz-user-select: none;
-  -ms-user-select: none;
   user-select: none;
 }
 
@@ -268,27 +260,6 @@ body.hide_scroll {
 
 :focus {
   outline: none !important;
-}
-
-@-webkit-keyframes fa-beat {
-  0% {
-    transform: scale(1);
-  }
-  5% {
-    transform: scale(1.25);
-  }
-  20% {
-    transform: scale(1.15);
-  }
-  30% {
-    transform: scale(1.8);
-  }
-  45% {
-    transform: scale(1);
-  }
-  100% {
-    transform: scale(1);
-  }
 }
 @keyframes fa-beat {
   0% {
@@ -326,6 +297,11 @@ header {
   position: fixed;
 }
 
+::-moz-selection {
+  background: #ff2b59;
+  color: #ffffff;
+}
+
 ::selection {
   background: #ff2b59;
   color: #ffffff;
@@ -350,7 +326,8 @@ header {
   left: 0;
   width: 100%;
   height: 100%;
-  object-fit: cover;
+  -o-object-fit: cover;
+     object-fit: cover;
   transform: scale(calc(1 + var(--scroll) / 2));
   z-index: 0;
 }
@@ -380,6 +357,25 @@ header {
   font-size: 14px;
   padding: 10px 32px;
   margin: 0 10px;
+}
+#latest-single a:hover {
+  background-color: #ebe2d0;
+  color: #121925;
+}
+#latest-single a.spotify::before {
+  content: "\f1bc";
+  font-family: "Font Awesome 6 Brands";
+  padding-right: 8px;
+}
+#latest-single a.youtube::before {
+  content: "\f167";
+  font-family: "Font Awesome 6 Brands";
+  padding-right: 8px;
+}
+#latest-single a.apple::before {
+  content: "\f179";
+  font-family: "Font Awesome 6 Brands";
+  padding-right: 8px;
 }
 
 .albums {
@@ -424,7 +420,8 @@ header {
 .meet-the-band img {
   transition: filter 0.3s ease;
   aspect-ratio: 116/137;
-  object-fit: cover;
+  -o-object-fit: cover;
+     object-fit: cover;
 }
 .meet-the-band a:hover {
   filter: brightness(1.15) saturate(1.2);
@@ -475,4 +472,4 @@ footer a:hover {
 }
 footer li {
   margin-right: 8px;
-}
+}/*# sourceMappingURL=custom_style.css.map */
