latest single font-18

--- a/inc/assets/sass/_variables.scss
+++ b/inc/assets/sass/_variables.scss
@@ -55,3 +55,4 @@ $transition_time: .3s;
 // fonts
 $albert-extra-bold: 				"AlbertSans-ExtraBold";
 $poppins-regular: 					"Poppins-regular";
+$gabarito-regular:					"Gabarito-Regular";
