--- a/inc/assets/css/custom_style.css
+++ b/inc/assets/css/custom_style.css
@@ -347,12 +347,13 @@ header {
 }
 #latest-single p {
   font-size: 15px;
-  font-family: Gabarito-Regular;
+  font-family: "Gabarito-Regular";
   margin-top: 0;
   margin-bottom: 1.88em;
 }
 #latest-single a {
   background-color: #ff2b59;
+  font-family: "Gabarito-Regular";
   color: #ffffff;
   font-size: 14px;
   padding: 10px 32px;
