--- a/inc/assets/sass/custom_style.scss
+++ b/inc/assets/sass/custom_style.scss
@@ -353,12 +353,13 @@ header {
 	}
 	p {
 		font-size: 15px;
-		font-family: Gabarito-Regular;
+		font-family: $gabarito-regular;
 		margin-top: 0;
 		margin-bottom: 1.88em;
 	}
 	a {
 		background-color: #ff2b59;
+		font-family: $gabarito-regular;
 		color: #ffffff;
 		font-size: 14px;
 		padding: 10px 32px;
