latest single font-19

--- a/inc/assets/css/custom_style.css
+++ b/inc/assets/css/custom_style.css
@@ -353,7 +353,7 @@ header {
 }
 #latest-single a {
   background-color: #ff2b59;
-  font-family: "Gabarito-Regular";
+  font-family: "Gabarito-Bold";
   color: #ffffff;
   font-size: 14px;
   padding: 10px 32px;
