--- a/inc/assets/sass/_variables.scss
+++ b/inc/assets/sass/_variables.scss
@@ -56,3 +56,4 @@ $transition_time: .3s;
 $albert-extra-bold: 				"AlbertSans-ExtraBold";
 $poppins-regular: 					"Poppins-regular";
 $gabarito-regular:					"Gabarito-Regular";
+$gabarito-bold:						"Gabarito-Bold";
