--- a/inc/assets/sass/custom_style.scss
+++ b/inc/assets/sass/custom_style.scss
@@ -359,7 +359,7 @@ header {
 	}
 	a {
 		background-color: #ff2b59;
-		font-family: $gabarito-regular;
+		font-family: $gabarito-bold;
 		color: #ffffff;
 		font-size: 14px;
 		padding: 10px 32px;
