--- a/inc/assets/sass/responsive.scss
+++ b/inc/assets/sass/responsive.scss
@@ -11,6 +11,12 @@
 }
 
 @media (max-width: 767px) {
+    .shop-now{
+        padding: 8rem;
+        h2 {
+            font-size: 2.5rem;
+        }
+    }
 }
 
 @media (max-width: 575px) {
