--- a/inc/assets/css/responsive.css
+++ b/inc/assets/css/responsive.css
@@ -6,3 +6,20 @@
     font-size: 2.5rem;
   }
 }
+@media (max-width: 575px) {
+  .albums h2 {
+    font-size: 1.5rem;
+  }
+  .albums h3 {
+    font-size: 1rem;
+  }
+  .meet-the-band h2 {
+    font-size: 1.5rem;
+  }
+  .shop-now {
+    padding: 8rem;
+  }
+  .shop-now h2 {
+    font-size: 1.5rem;
+  }
+}
