--- a/inc/assets/sass/responsive.scss
+++ b/inc/assets/sass/responsive.scss
@@ -20,6 +20,25 @@
 }
 
 @media (max-width: 575px) {
+    .albums {
+        h2 {
+            font-size: 1.5rem;
+        }
+        h3 {
+            font-size: 1rem;
+        }
+    }
+    .meet-the-band {
+        h2 {
+            font-size: 1.5rem;
+        }
+    }
+    .shop-now{
+        padding: 8rem;
+        h2 {
+            font-size: 1.5rem;
+        }
+    }
 }
 
 @media (max-width: 470px) {
