--- a/inc/assets/sass/responsive.scss
+++ b/inc/assets/sass/responsive.scss
@@ -39,6 +39,11 @@
             font-size: 1.5rem;
         }
     }
+    footer {
+        a {
+            font-size: .85rem;
+        }
+    }
 }
 
 @media (max-width: 470px) {
