--- a/inc/assets/sass/_variables.scss
+++ b/inc/assets/sass/_variables.scss
@@ -54,6 +54,6 @@ $transition_time: .3s;
 
 // fonts
 $albert-extra-bold: 				"AlbertSans-ExtraBold";
-$poppins-regular: 					"Poppins-regular";
+$poppins-regular: 					"Poppins-Regular";
 $gabarito-regular:					"Gabarito-Regular";
 $gabarito-bold:						"Gabarito-Bold";
