--- a/style.css
+++ b/style.css
@@ -217,8 +217,8 @@ th {
 }
 
 @font-face {
-	font-family: "Poppins-regular";
-	src: url("./inc/assets/fonts/poppins-regular.ttf") format("truetype");
+	font-family: "Poppins-Regular";
+	src: url("./inc/assets/fonts/Poppins-Regular.ttf") format("truetype");
 	font-weight: normal;
 	font-style: normal;
 }
