--- a/inc/assets/css/custom_style.css
+++ b/inc/assets/css/custom_style.css
@@ -173,7 +173,7 @@ p {
 
 body {
   color: #000;
-  font-family: "Poppins-regular";
+  font-family: "Poppins-Regular";
   background-color: #1b1b1b;
   overflow: auto;
   overflow-x: hidden !important;
@@ -457,7 +457,7 @@ header {
   text-transform: uppercase;
 }
 .meet-the-band h3 {
-  font-family: "Poppins-regular";
+  font-family: "Poppins-Regular";
   font-size: 1.1rem;
   text-align: left;
   color: #fff;
@@ -466,7 +466,7 @@ header {
 .meet-the-band p {
   color: #fff;
   font-size: 0.8rem;
-  font-family: "Poppins-regular";
+  font-family: "Poppins-Regular";
 }
 
 .shop-now {
