--- a/inc/assets/css/responsive.css
+++ b/inc/assets/css/responsive.css
@@ -17,7 +17,7 @@
     font-size: 1.5rem;
   }
   .shop-now {
-    padding: 8rem;
+    padding: 8rem 0;
   }
   .shop-now h2 {
     font-size: 1.5rem;
