--- a/inc/assets/sass/responsive.scss
+++ b/inc/assets/sass/responsive.scss
@@ -34,7 +34,7 @@
         }
     }
     .shop-now{
-        padding: 8rem;
+        padding: 8rem 0;
         h2 {
             font-size: 1.5rem;
         }
