--- a/inc/assets/sass/custom_style.scss
+++ b/inc/assets/sass/custom_style.scss
@@ -386,6 +386,16 @@ header {
 		font-family: "Font Awesome 6 Brands";
 		padding-right: 8px;
 	}
+
+	#vinyl{
+		animation: disc_spin 3.5s linear infinite;
+	}
+}
+
+@keyframes disc_spin{
+	100%{
+		transform: rotate (360deg);
+	}
 }
 
 .albums {
