--- a/inc/assets/sass/custom_style.scss
+++ b/inc/assets/sass/custom_style.scss
@@ -396,6 +396,10 @@ header {
 		top: 50%;
 		left: 1px;
 		z-index: 2;
+		max-width:375px; 
+		width:100%; 
+		height:auto; 
+		margin:30px 0;
 	}
 
 	#latest-single-vinyl-pic{
