--- a/inc/assets/sass/custom_style.scss
+++ b/inc/assets/sass/custom_style.scss
@@ -406,7 +406,10 @@ header {
 		position: absolute;
 		top: 50%;
 		left: 50%;
+		width: 40%;
+		height: auto;
 		z-index: 0;
+		transform: translate(-50%, -50%);
 	}
 
 	#vinyl{
