--- a/inc/assets/sass/custom_style.scss
+++ b/inc/assets/sass/custom_style.scss
@@ -416,6 +416,7 @@ header {
 		position: absolute;
 		top: 50%;
 		left: 50%;
+		max-width: 375px;
 		animation: disc_spin 3.5s linear infinite;
 		z-index: 1;
 	}
