--- a/inc/assets/sass/custom_style.scss
+++ b/inc/assets/sass/custom_style.scss
@@ -392,8 +392,7 @@ header {
 	}
 
 	#latest-single-large-pic,
-	#latest-single-vinyl-pic,
-	#vinyl{
+	#latest-single-vinyl-pic{
 		position: absolute;
 		top: 50%;
 		transform: translateX(-50%);
@@ -409,13 +408,15 @@ header {
 
 	#vinyl{
 		z-index: 1;
+		position: absolute;
+		top: 50%;
 		animation: disc_spin 3.5s linear infinite;
 	}
 }
 
 @keyframes disc_spin{
 	100%{
-		transform: rotate(360deg);
+		transform: translateX(-50%) rotate(360deg);
 	}
 }
 
