--- a/inc/assets/css/custom_style.css
+++ b/inc/assets/css/custom_style.css
@@ -401,6 +401,9 @@ header {
 }
 
 @keyframes disc_spin {
+  0% {
+    transform: translateX(-50%) rotate(0deg);
+  }
   100% {
     transform: translateX(-50%) rotate(360deg);
   }
