--- a/inc/assets/sass/custom_style.scss
+++ b/inc/assets/sass/custom_style.scss
@@ -415,6 +415,9 @@ header {
 }
 
 @keyframes disc_spin{
+	0%{
+		transform: translateX(-50%) rotate(0deg);
+	}
 	100%{
 		transform: translateX(-50%) rotate(360deg);
 	}
