--- a/inc/assets/sass/custom_style.scss
+++ b/inc/assets/sass/custom_style.scss
@@ -393,6 +393,7 @@ header {
 
 	#latest-single-large-pic,
 	#latest-single-vinyl-pic{
+		position: absolute;
 		top: 50%;
 		transform: translateX(-50%);
 	}
@@ -407,6 +408,7 @@ header {
 
 	#vinyl{
 		z-index: 1;
+		position: absolute;
 		top: 50%;
 		animation: disc_spin 3.5s linear infinite;
 	}
