--- a/inc/assets/sass/custom_style.scss
+++ b/inc/assets/sass/custom_style.scss
@@ -396,10 +396,13 @@ header {
 		position: absolute;
 		top: 50%;
 		transform: translateX(-50%);
+		width: 15rem;
 	}
 
 	#latest-single-large-pic{
 		z-index: 2;
+		left:10rem;
+		transform: translateY(-50%);
 	}
 
 	#latest-single-vinyl-pic{
@@ -411,6 +414,9 @@ header {
 		position: absolute;
 		top: 50%;
 		animation: disc_spin 3.5s linear infinite;
+		width: 15rem;
+		left: 17.5rem;
+		transform: translateY(-50%);
 	}
 }
 
