--- a/inc/assets/css/custom_style.css
+++ b/inc/assets/css/custom_style.css
@@ -386,9 +386,12 @@ header {
   position: absolute;
   top: 50%;
   transform: translateX(-50%);
+  width: 15rem;
 }
 #latest-single #latest-single-large-pic {
   z-index: 2;
+  left: 10rem;
+  transform: translateY(-50%);
 }
 #latest-single #latest-single-vinyl-pic {
   z-index: 0;
@@ -398,6 +401,9 @@ header {
   position: absolute;
   top: 50%;
   animation: disc_spin 3.5s linear infinite;
+  width: 15rem;
+  left: 17.5rem;
+  transform: translateY(-50%);
 }
 
 @keyframes disc_spin {
