--- a/inc/assets/css/custom_style.css
+++ b/inc/assets/css/custom_style.css
@@ -380,6 +380,16 @@ header {
 }
 #latest-single #vinyl-wrapper {
   position: relative;
+  background-image: url("https://nuwera.band/wp-content/uploads/2024/09/Groundless-Square-375x375.jpg");
+  background-size: cover;
+  background-position: center;
+}
+#latest-single #vinyl {
+  max-height: 100%;
+  max-width: 100%;
+  right: 50%;
+  transform: translateX(-50%);
+  animation: disc_spin 3.5s linear infinite;
 }
 
 @keyframes disc_spin {
