--- a/inc/assets/sass/custom_style.scss
+++ b/inc/assets/sass/custom_style.scss
@@ -389,12 +389,16 @@ header {
 
 	#vinyl-wrapper {
 		position: relative;
-		background-image: src=
-			"https://nuwera.band/wp-content/uploads/2024/09/Groundless-Square-375x375.jpg";
-		#vinyl {
-			max-height: 100%;
-			max-width: 100%;
-		}
+		background-image: url("https://nuwera.band/wp-content/uploads/2024/09/Groundless-Square-375x375.jpg");
+  		background-size: cover;
+  		background-position: center; 
+	}
+	#vinyl {
+		max-height: 100%;
+		max-width: 100%;
+		right: 50%;
+		transform: translateX(-50%);
+		animation: disc_spin 3.5s linear infinite;
 	}
 }
 
