--- a/inc/assets/css/custom_style.css
+++ b/inc/assets/css/custom_style.css
@@ -383,6 +383,7 @@ header {
   background-image: url("https://nuwera.band/wp-content/uploads/2024/09/Groundless-Square-375x375.jpg");
   background-size: cover;
   background-position: center;
+  width: 25rem;
 }
 #latest-single #vinyl {
   max-height: 100%;
