--- a/inc/assets/sass/custom_style.scss
+++ b/inc/assets/sass/custom_style.scss
@@ -392,6 +392,7 @@ header {
 		background-image: url("https://nuwera.band/wp-content/uploads/2024/09/Groundless-Square-375x375.jpg");
   		background-size: cover;
   		background-position: center; 
+		width: 25rem;
 	}
 	#vinyl {
 		max-height: 100%;
