--- a/inc/assets/css/custom_style.css
+++ b/inc/assets/css/custom_style.css
@@ -384,8 +384,10 @@ header {
   background-size: cover;
   background-position: center;
   width: 25rem;
+  height: 25rem;
 }
 #latest-single #vinyl {
+  position: absolute;
   max-height: 100%;
   max-width: 100%;
   right: 50%;
